# simple-kademlia

./: CMakeLists.txt  README.md  main.cpp
include/: callbacks.hpp  kademlianode.hpp  kademlianodeinfo.hpp  kademliaprotocol.hpp  kbucket.hpp  messages.hpp  network.hpp  protocol.hpp  request.hpp  routingtree.hpp
include/aux/: cppint_import_export.hpp  picosha2.hpp
include/messages/: findNodeQuery.hpp  findNodeResponse.hpp  findQuery.hpp  findValueQuery.hpp  findValueResponse.hpp  message.hpp  messageType.hpp  pingMessage.hpp  pingQuery.hpp  pingResponse.hpp  queryMessage.hpp  responseMessage.hpp  storeQuery.hpp  storeResponse.hpp
include/node/: kademlianode.hpp  kademlianodeinfo.hpp  nodeinfo.hpp
include/requests/: request.hpp
include/routing tree/: kademlianode.hpp  kbucket.hpp  routingtree.hpp
src/: kademlianodeprotocol.cpp  kademliaprotocol.cpp  network.cpp  protocol.cpp
src/messages/: message.cpp  pingMessage.cpp
src/node/: kademlianode.cpp
test/: serialization.cpp  testNetworking.cpp
